added github link to package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "categories": [
         "Themes"
     ],
-    "repository": {},
+    "repository": "https://github.com/BasisDeveloper/Tsoding-Color-Theme-unofficial",
     "contributes": {
         "themes": [
             {
