--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "tsoding-color-theme-unofficial",
     "displayName": "Tsoding Color Theme (unofficial)",
-    "description": "A theme based on the Tsoding Daily Youtube channel's frequently used code editor theme. This is not for public use yet, use at your own \"risk\".",
+    "description": "A theme based on the Tsoding Daily Youtube channel's frequently used code editor theme.",
     "version": "0.0.9",
     "engines": {
         "vscode": "^1.68.0"
