small commit before 1.10
- edited the description.
- created a new darker color theme.

I'm going to rename the project to Tsoding Theme 2021, because that is what this color theme is based on, the name is deceptive as it is now. I'm also going to be removing the light theme in the future and making it it's own exetension.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "tsoding-color-theme-unofficial",
     "displayName": "Tsoding Color Theme (unofficial)",
     "description": "A theme based on the Tsoding Daily Youtube channel's frequently used code editor theme.",
-    "version": "0.0.11",
+    "version": "1.1.0",
     "engines": {
         "vscode": "^1.68.0"
     },
@@ -18,6 +18,11 @@
                 "label": "Tsoding Color Theme, Dark",
                 "uiTheme": "vs-dark",
                 "path": "./themes/tsoding-theme-dark.json"
+            },
+            {
+                "label": "Tsoding Color Theme, Darker",
+                "uiTheme": "vs-dark",
+                "path": "./themes/tsoding-theme-darker.json"
             },
             {
                 "label": "Tsoding Color Theme, Light",
