drastically improved the faithfulness of the theme
- Now the theme is *99% accurate to Tsoding's theme from 2021.

- I've also renamed the theme to make it less deceptive. It was difficult to tell if this was his current theme or an older one.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "tsoding-color-theme-unofficial",
-    "displayName": "Tsoding Color Theme (unofficial)",
+    "name": "tsoding-color-theme-2021-unofficial",
+    "displayName": "Tsoding's Theme (2021)",
     "description": "A theme based on the Tsoding Daily Youtube channel's frequently used code editor theme.",
-    "version": "1.1.0",
+    "version": "2.0.0",
     "engines": {
         "vscode": "^1.68.0"
     },
