testing out some gifs in the readme.

--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
     "name": "tsoding-color-theme-2021-unofficial",
-    "displayName": "Tsoding's Theme (2021)",
+    "displayName": "Tsoding Theme (2021)",
     "description": "A theme based on the Tsoding Daily Youtube channel's frequently used code editor theme.",
     "version": "1.0.0",
     "engines": {
         "vscode": "^1.68.0"
     },
+    "preview": true,
     "icon": "icons/tsoding-face-pog.png",
+    "galleryBanner": {
+        "theme": "dark"
+    },
     "categories": [
         "Themes"
     ],
     "publisher": "BasisEngineDev",
-    "repository": "https://github.com/BasisDeveloper/Tsoding-Color-Theme-unofficial",
+    "repository": {
+        "type": "github",
+        "url": "https://github.com/BasisDeveloper/Tsoding-Color-Theme-unofficial"
+    },
     "contributes": {
         "themes": [
             {
